--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -1,7 +1,8 @@
 ---
-import Card from "../components/Card.astro";
-import Navigation from "../components/Navigation.astro"
+
 ---
+
+//her legger vi den overstående layouten som skal på alle sider typ altså header, footer, bakgrund etc
 
 <html lang="en">
 	<head>
@@ -12,11 +13,8 @@ import Navigation from "../components/Navigation.astro"
 		<title>Astro</title>
 	</head>
 	<body>
-<Navigation />
 		<h1>Astro</h1>
 		<main>
-<Card />
-			<article></article>
 		</main>
 	</body>
 </html>
