--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,4 +5,6 @@
 <h1>Hei</h1>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id vitae necessitatibus ad harum doloremque, enim voluptate amet, eos, saepe eligendi totam natus deleniti sint vel incidunt. Ea unde ipsam corrupti.</p>
 </article>
-<style></style>
+<style>
+    
+</style>
