--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Navigation from "../components/Navigation.astro";
     <Navigation />
     <h1>Astro</h1>
     <main>
+      <li><a href="/events">event</a></li>
       <Card />
       <article></article>
     </main>
