--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../style/style.css"
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
 ---
