--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-import "../style/style.css"
+import "../style/style.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
+import Button from "../components/Button.astro";
 ---
 
 <html lang="en">
@@ -16,6 +17,7 @@ import Navigation from "../components/Navigation.astro";
     <Navigation />
     <h1>Astro</h1>
     <main>
+      <Button variant="primary" size="medium">TEXT</Button>
       <article></article>
     </main>
   </body>
