--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -1,5 +1,6 @@
 ---
-import Arrow from "../components/Arrow.astro":
+import "../style/style.css"
+import Arrow from "../components/Arrow.astro"
 ---
 
 <html lang="en">
