--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import "../style/style.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
-import Button from "../components/Button.astro";
+import Button from "../components/button.astro";
 ---
 
 <html lang="en">
