--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -13,6 +13,11 @@
 		<title>Astro</title>
 	</head>
 	<body>
+        <header>
+            <nav>
+                <ul>
+                </ul>
+            </nav>
 		<h1>Astro</h1>
 		<main>
 		</main>
