--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -40,5 +40,6 @@ console.log("program");
     grid-template-columns: 1fr 1fr;
     gap: 20px;
     margin: 20px;
+    padding-left: 19%;
 }
 </style>
