--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -18,12 +18,12 @@ console.log("program");
         <h2>ALLE LYSVÆRKER OG EVENTS D.2.FEB 25.FEB 2024</h2>
         <section class="grid_1-1">
         <div class="propic">
-            <img src="" alt="Lysværk">
-            <a href=""><h3>LYSVÆRKER</h3></a>
+            <img src="../../public/img/11-The-Wave-scaled.webp"" alt="Lysværk">
+        <h3>LYSVÆRKER</h3>
             <arrow /> <a href=""></a>
         </div>
         <div class="propic">
-            <img src="" alt="Events">
+            <img src="../../public/img/Event-Jellyfish.webp" alt="Events">
             <a href="Events.astro"><h3>EVENTS</h3></a>
             <arrow /> <a href="art.astro"></a>
         </div>
