--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -42,4 +42,15 @@ console.log("program");
     margin: 20px;
     padding-left: 19%;
 }
+
+.propic {
+    justify-content: center;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.img propic {
+    width: 20%;
+    height: 100%;
+}
 </style>
