--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -46,11 +46,12 @@ console.log("program");
 .propic {
     justify-content: center;
     border-radius: 10px;
+    object-fit: cover;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .img propic {
-    width: 20%;
+    width: 100%;
     height: 100%;
 }
 </style>
