--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -18,12 +18,12 @@ console.log("program");
         <h2>ALLE LYSVÆRKER OG EVENTS D.2.FEB 25.FEB 2024</h2>
         <section class="grid_1-1">
         <div class="propic">
-            <img src="../../public/img/11-The-Wave-scaled.webp"" alt="Lysværk">
+            <img src="../../public/img/The-Wave.webp"" alt="Lysværk">
         <h3>LYSVÆRKER</h3>
             <arrow /> <a href=""></a>
         </div>
         <div class="propic">
-            <img src="../../public/img/Event-Jellyfish.webp" alt="Events">
+            <img src="../../public/img/Jellyfish.webp" alt="Events">
             <a href="Events.astro"><h3>EVENTS</h3></a>
             <arrow /> <a href="art.astro"></a>
         </div>
@@ -46,12 +46,16 @@ console.log("program");
 .propic {
     justify-content: center;
     border-radius: 10px;
-    object-fit: cover;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    
 }
 
 .img propic {
     width: 100%;
-    height: 100%;
+    height: 100%;object-fit: cover;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+h3 propic {
+    text-align: center;
+padding: 20px;
 }
 </style>
