Vena har ændret i masteren

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import "../style/style.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
-import Button from "../components/button.astro";
+import Button from "../components/Button.astro";
 ---
 
 <html lang="en">
@@ -15,8 +15,9 @@ import Button from "../components/button.astro";
   </head>
   <body>
     <Navigation />
-    <h1>Astro</h1>
     <main>
+      <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET </h1>
+      <h2>2/2 - 25/2 2024</h2>
       <Button variant="primary" size="medium">TEXT</Button>
       <article></article>
     </main>
