--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,25 @@
 ---
 import Card from "../components/Card.astro";
-import Navigation from "../components/Navigation.astro"
+import Navigation from "../components/Navigation.astro";
+import Button from "../components/button.astro";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-<Navigation />
-		<h1>Astro</h1>
-		<main>
-<Card />
-			<article></article>
-		</main>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Astro</title>
+  </head>
+  <body>
+    <Navigation />
+    <main>
+      <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
+      <h2>2/2 - 25/2 2024</h2>
+      <Button />
+      <Button />
+      <article></article>
+    </main>
+  </body>
 </html>
