--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,12 +18,11 @@ import Button from "../components/Button.astro";
     <main>
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2>2/2 - 25/2 2024</h2>
-      <Button variant="primary" size="medium">TEXT</Button>
-      =======
+
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2>2/2 - 25/2 2024</h2>
-      <Button />
-      <Button />
+      <Button variant="primary" size="medium">SE PROGRAM</Button>
+      <Button variant="primary" size="medium">RUTER OG TURE</Button>
       <article></article>
     </main>
   </body>
