--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,10 +1,10 @@
 ---
 
 ---
+
 <article>
-<h1>Hei</h1>
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id vitae necessitatibus ad harum doloremque, enim voluptate amet, eos, saepe eligendi totam natus deleniti sint vel incidunt. Ea unde ipsam corrupti.</p>
+    <a href="../../public/IMG/kort.webp"></a>
+  <h2>Se årets program</h2>
+  <p>Udforsk årets lysværker og events</p>
 </article>
-<style>
-    
-</style>
+<style></style>
