--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -2,14 +2,14 @@
 const { variant, size } = Astro.props;
 ---
 
-<button><slot/></button>
+<button><slot /></button>
 
 <style>
   button {
     padding: 1rem;
+    align-items: center;
   }
   .primary {
-  
   }
   .medium {
     font-size: 1rem;
