--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "../style/style.css";
+import "../style/index.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
 import Button from "../components/Button.astro";
@@ -12,6 +13,7 @@ import Button from "../components/Button.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <link rel="stylesheet" href="/public/style.css" />
+    <link rel="stylesheet" href="/public/index.css" />
     <title>Index</title>
   </head>
   <body>
@@ -34,4 +36,3 @@ import Button from "../components/Button.astro";
     </main>
   </body>
 </html>
-
