--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import "../style/style.css";
-import "../style/index.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
 import Button from "../components/Button.astro";
@@ -12,8 +11,8 @@ import Button from "../components/Button.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="stylesheet" href="/public/style.css" />
-    <link rel="stylesheet" href="/public/index.css" />
+    <link rel="stylesheet" href="../../public/style.css" />
+    <link rel="stylesheet" href="../../public/index.css" />
     <title>Index</title>
   </head>
   <body>
