--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,12 @@ import Button from "../components/Button.astro";
     <main>
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2 id="dato">2/2 - 25/2 2024</h2>
+      <div class="Buttons">
+      <a class="Button1" href=""></a>
       <Button variant="primary" size="medium">SE PROGRAM</Button>
+      <a class="Button2" href=""></a>
       <Button variant="primary" size="medium">RUTER OG TURE</Button>
+    </div>
       <article>
         <p>
           En årligt tilbagevendende festival for lys, der transformerer det
