--- a/public/index.css
+++ b/public/index.css
@@ -8,7 +8,7 @@
 }
 @font-face {
   font-family: inter;
-  src: url(/FONT/InterTight-ExtraBold.ttf);
+  src: url(/FONT/InterTight-Bold.ttf);
 }
 
 p {
@@ -25,7 +25,7 @@ h1 {
   -webkit-text-stroke: 0.1rem;
   -webkit-text-fill-color: transparent;
   text-align: center;
-  font-family: RobR;
+  font-family: inter;
   line-height: 2;
 }
 
