--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -7,11 +7,16 @@ const { variant, size } = Astro.props;
 <style>
   button {
     padding: 1rem;
-    align-items: center;
   }
   .primary {
   }
   .medium {
     font-size: 1rem;
+    border: 2px solid #fff8d2;
+  }
+
+  .buttons {
+    border: 2px solid #fff8d2;
+    align-items: center;
   }
 </style>
