--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,4 +7,11 @@
   <h2>Se årets program</h2>
   <p>Udforsk årets lysværker og events</p>
 </article>
-<style></style>
+<style>
+  .grid{
+    
+  }
+  p{
+    text-align: center;
+  }
+</style>
