--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,11 +21,11 @@ import Button from "../components/Button.astro";
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2 id="dato">2/2 - 25/2 2024</h2>
       <div class="Buttons">
-      <a class="Button1" href=""></a>
-      <Button variant="primary" size="medium">SE PROGRAM</Button>
-      <a class="Button2" href=""></a>
-      <Button variant="primary" size="medium">RUTER OG TURE</Button>
-    </div>
+        <a class="Button1" href=""></a>
+        <Button variant="primary" size="medium">SE PROGRAM</Button>
+        <a class="Button2" href=""></a>
+        <Button variant="primary" size="medium">RUTER OG TURE</Button>
+      </div>
       <article>
         <p>
           En årligt tilbagevendende festival for lys, der transformerer det
@@ -33,9 +33,23 @@ import Button from "../components/Button.astro";
           lysdesign og lysende oplevelser midt i København.
         </p>
       </article>
-      <div>
-        <Card />
-      </div>
+      <section id="grid-1">
+        <div>
+          <a href="/public/IMG/kort.webp"></a>
+          <h2>Se årets program</h2>
+          <p>Udforsk årets lysværker og events</p>
+        </div>
+        <div>
+          <a href="/public/IMG/kort.webp"></a>
+          <h2></h2>
+          <p>Udforsk årets lysværker og events</p>
+        </div>
+        <div>
+          <a href="/public/IMG/kort.webp"></a>
+          <h2>Se årets program</h2>
+          <p>Udforsk årets lysværker og events</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
