--- a/src/Layout.astro
+++ b/src/Layout.astro
@@ -1,8 +1,8 @@
 ---
-
+//her legger vi den overstående layouten som skal på alle sider typ altså header, footer, bakgrund etc
 ---
 
-//her legger vi den overstående layouten som skal på alle sider typ altså header, footer, bakgrund etc
+
 
 <html lang="en">
 	<head>
@@ -18,8 +18,8 @@
                 <ul>
                 </ul>
             </nav>
-		<h1>Astro</h1>
 		<main>
+            <slot />
 		</main>
 	</body>
 </html>
