--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,9 @@ import Button from "../components/Button.astro";
   <body>
     <Navigation />
     <main>
+      <div class="container">
+        <img src="/public/IMG/baggrund.webp" alt="" />
+      </div>
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2 id="dato">2/2 - 25/2 2024</h2>
       <div class="Buttons">
@@ -40,16 +43,25 @@ import Button from "../components/Button.astro";
           <p>Udforsk årets lysværker og events</p>
         </div>
         <div>
-          <a href="/public/IMG/kort.webp"></a>
-          <h2></h2>
-          <p>Udforsk årets lysværker og events</p>
+          <a href="/public/IMG/kunstværk.webp"></a>
+          <h2>Tjek vores rutevejledning</h2>
+          <p>Se nogle af vores gå-og cykelruter</p>
         </div>
         <div>
-          <a href="/public/IMG/kort.webp"></a>
-          <h2>Se årets program</h2>
-          <p>Udforsk årets lysværker og events</p>
+          <a href="/public/IMG/kunst.webp"></a>
+          <h2>book en guidet tour</h2>
+          <p>oplev lysfestivalen på vores guidede ture</p>
         </div>
       </section>
+      <section>
+        <Button variant="primary" size="medium">SPONSORER </Button>
+        <div>
+          <img src="" alt="" />
+        </div>
+      </section>
+      <div>
+        <footer></footer>
+      </div>
     </main>
   </body>
 </html>
