--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -2,12 +2,17 @@
 const { variant, size } = Astro.props;
 ---
 
-<button><slot /></button>
+<button><slot/></button>
 
 <style>
+  
   button {
     padding: 1rem;
     align-items: center;
+    background-color: transparent;
+    border: 2px solid #FFF8D2;
+    color:#FFF8D2 ;
+    
   }
   .primary {
   }
