--- a/public/index.css
+++ b/public/index.css
@@ -12,7 +12,6 @@
   top: 0;
 }
 
-
 @font-face {
   font-family: RobR;
   src: url(/FONT/Roboto-Regular.ttf);
@@ -42,6 +41,7 @@ h1 {
   text-align: center;
   font-family: inter;
   line-height: 2;
+  font-size: 32px;
 }
 
 h2 {
@@ -49,6 +49,7 @@ h2 {
   text-align: center;
   font-family: RobR;
   line-height: 2;
+  font-size: 20px;
 }
 p {
   color: #fff8d2;
