--- a/public/index.css
+++ b/public/index.css
@@ -46,7 +46,7 @@ h1 {
 
 h2 {
   color: #fff8d2;
-  text-align: center;
+  text-align: left;
   font-family: RobR;
   line-height: 2;
   font-size: 20px;
@@ -59,8 +59,13 @@ p {
   color: #b2b8eb;
   text-align: center;
 }
-
-.grid-1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+/* desktop */
+@media (min-width: 600px) {
+  #grid-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  main {
+    padding: 30px;
+  }
 }
