--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -11,5 +11,6 @@ const { variant, size } = Astro.props;
     background-color: transparent;
     border: 2px solid #FFF8D2;
     color:#FFF8D2;
+    margin: 1px;
   }
 </style>
