--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Button from "../components/Button.astro";
         </div>
       </section>
       <section>
-        <Button variant="primary" size="medium">SPONSORER </Button>
+        <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
         <div>
           <img src="" alt="" />
         </div>
