--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,7 @@ import Button from "../components/Button.astro";
   <body>
     <Navigation />
     <main>
-      <div class="container">
-        <img src="/public/IMG/baggrund.webp" alt="" />
-      </div>
+      <div class="container"></div>
       <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
       <h2 id="dato">2/2 - 25/2 2024</h2>
       <div class="Buttons">
@@ -38,30 +36,30 @@ import Button from "../components/Button.astro";
       </article>
       <section id="grid-1">
         <div>
-          <a href="/public/IMG/kort.webp"></a>
-          <h2>Se årets program</h2>
-          <p>Udforsk årets lysværker og events</p>
+          <img src="/IMG/kort.webp" />
         </div>
-        <div>
-          <a href="/public/IMG/kunstværk.webp"></a>
-          <h2>Tjek vores rutevejledning</h2>
-          <p>Se nogle af vores gå-og cykelruter</p>
-        </div>
-        <div>
-          <a href="/public/IMG/kunst.webp"></a>
-          <h2>book en guidet tour</h2>
-          <p>oplev lysfestivalen på vores guidede ture</p>
-        </div>
-      </section>
-      <section>
-        <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
-        <div>
-          <img src="" alt="" />
-        </div>
+        <h2>Se årets program</h2>
+        <p>Udforsk årets lysværker og events</p>
       </section>
       <div>
-        <footer></footer>
+        <img src="/IMG/kunstværk.webp" />
       </div>
+      <h2>Tjek vores rutevejledning</h2>
+      <p>Se nogle af vores gå-og cykelruter</p>
     </main>
+    <div>
+      <img src="/IMG/kunst.webp" />
+    </div>
+    <h2>book en guidet tour</h2>
+    <p>oplev lysfestivalen på vores guidede ture</p>
   </body>
 </html>
+<section>
+  <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
+  <div>
+    <img src="" alt="" />
+  </div>
+</section>
+<div>
+  <footer></footer>
+</div>
