--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,11 @@ import Button from "../components/Button.astro";
   </body>
 </html>
 <section>
-  <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
-  <div>
-    <img src="" alt="" />
+  <div class="knap2">
+    <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
+  </div>
+  <div class="spons-img">
+    <img src="/IMG/spons.webp" alt="" />
   </div>
 </section>
 <div>
