--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,8 @@
+img {
+  max-width: 300px;
+  max-height: 400px;
+}
+
 .container {
   width: 50%;
   height: 100%;
@@ -12,6 +17,15 @@
   top: 0;
 }
 .Buttons {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+.knap2 {
+  margin: 0 auto;
+  width: fit-content;
+}
+.spons-img {
   margin: 0 auto;
   width: fit-content;
 }
