--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,31 +37,36 @@ import Button from "../components/Button.astro";
       <section id="grid-1">
         <div>
           <img src="/IMG/kort.webp" />
+          <h2>Se årets program</h2>
+          <p>Udforsk årets lysværker og events</p>
+          <img class="pil" src="/IMG/pil.webp" alt="" />
         </div>
-        <h2>Se årets program</h2>
-        <p>Udforsk årets lysværker og events</p>
+
+        <div>
+          <img src="/IMG/kunstværk.webp" />
+          <h2>Tjek vores rutevejledning</h2>
+          <p>Se nogle af vores gå-og cykelruter</p>
+          <img class="pil" src="/IMG/pil.webp" alt="" />
+        </div>
+
+        <div>
+          <img src="/IMG/kunst.webp" />
+          <h2>Book en guidet tour</h2>
+          <p>Oplev lysfestivalen på vores guidede ture</p>
+          <img class="pil" src="/IMG/pil.webp" alt="" />
+        </div>
+      </section>
+      <section>
+        <div class="knap2">
+          <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
+        </div>
+        <div class="spons-img">
+          <img src="/IMG/spons.webp" alt="" />
+        </div>
       </section>
       <div>
-        <img src="/IMG/kunstværk.webp" />
+        <footer></footer>
       </div>
-      <h2>Tjek vores rutevejledning</h2>
-      <p>Se nogle af vores gå-og cykelruter</p>
     </main>
-    <div>
-      <img src="/IMG/kunst.webp" />
-    </div>
-    <h2>book en guidet tour</h2>
-    <p>oplev lysfestivalen på vores guidede ture</p>
   </body>
 </html>
-<section>
-  <div class="knap2">
-    <Button variant="primary" size="medium">PARTNERE & SPONSORER </Button>
-  </div>
-  <div class="spons-img">
-    <img src="/IMG/spons.webp" alt="" />
-  </div>
-</section>
-<div>
-  <footer></footer>
-</div>
