--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -1,6 +1,7 @@
 ---
 import "../style/style.css";
 import Card_guidet from "../components/Card_guidet.astro";
+import Rute from "../components/Rute.astro";
 ---
 
 <html lang="da">
@@ -17,9 +18,23 @@ import Card_guidet from "../components/Card_guidet.astro";
       <h3>VÆLG EN AF VORES GÅ- OG CYKELRUTER</h3>
       <section id="infomap">
         <div id="info">
-          <p>ruter</p>
-          <p>blablba</p>
-          <p>vlalva</p>
+          <p id="routes">Routes</p>
+          <section>
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+            <Rute text="xxx" />
+          </section>
         </div>
         <div id="google-map"></div>
       </section>
