--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,10 +1,37 @@
+@font-face {
+  font-family: RobR;
+  src: url(/FONT/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: RobL;
+  src: url(/FONT/Roboto-Light.ttf);
+}
+@font-face {
+  font-family: inter;
+  src: url(/FONT/InterTight-ExtraBold.ttf);
+}
+
 body {
   background: #010d25;
   display: flex;
 }
 
-h1 h2 {
+
+h1 {
+  color:#fff8d2;
+  -webkit-text-stroke: 0.05rem;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  font-family: RobR;
+  line-height: 2;
+}
+
+h2 {
   color: #fff8d2;
+}
+
+h3 {
+  color: #B2B8EB;
 }
 
 
@@ -38,4 +65,9 @@ h1 h2 {
   font-weight: 300;
   margin-bottom: 10px;
   line-height: 16px;
+}
+
+
+p {
+  color: #F2F4FF
 }
