--- a/src/pages/events.astro
+++ b/src/pages/events.astro
@@ -24,7 +24,7 @@ console.log("test", data);
   </head>
   <body>
     <Navigation />
-    <h1>Astro</h1>
+    <h1>Program</h1>
     <main>
       {
         data.map((event) => (
