--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,10 +16,10 @@ import Button from "../components/Button.astro";
     <title>Index</title>
   </head>
   <body>
-    <Navigation />
     <div class="singlecellgrid">
       <img src="/IMG/baggrund.webp" />
       <main>
+        <Navigation />
         <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
         <h2 id="dato">2/2 - 25/2 2024</h2>
         <div class="Buttons">
@@ -31,7 +31,7 @@ import Button from "../components/Button.astro";
       </main>
     </div>
     <article>
-      <p>
+      <p class="pt">
         En årligt tilbagevendende festival for lys, der transformerer det stille
         og kolde vintermørke til en særlig fejring af lyskunst, lysdesign og
         lysende oplevelser midt i København.
