--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,6 +13,11 @@ img {
   position: relative;
   overflow: hidden;
 }
+.pt {
+  text-align: left;
+  margin: 20px;
+  padding: 20px;
+}
 
 /* body {
   background-image: url(/IMG/baggrund.webp);
@@ -104,5 +109,17 @@ p {
   }
   main {
     padding: 30px;
+  }
+
+  .pt {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: left;
+    width: fit-content;
+    margin: 20px auto;
+  }
+  h1 {
+    margin: 80px;
+    font-size: 40px;
   }
 }
