--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,23 @@
 body {
   background: #010d25;
 }
+h1 {
+  color: #fff8d2;
+  -webkit-text-stroke: 0.05rem;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+  font-family: inter;
+  line-height: 2;
+  font-size: 32px;
+}
+
+h2 {
+  color: #fff8d2;
+  text-align: left;
+  font-family: RobR;
+  line-height: 2;
+  font-size: 20px;
+}
+p {
+  color: #fff8d2;
+}
