--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -6,7 +6,7 @@ const { variant, size } = Astro.props;
 
 <style>
   
-  button {
+  Button {
     padding: 1rem;
     background-color: transparent;
     border: 2px solid #FFF8D2;
