border på filtersystem

--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -19,21 +19,21 @@ import Rute from "../components/Rute.astro";
       <section id="infomap">
         <div id="info">
           <p id="routes">Routes</p>
-          <section>
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
-            <Rute text="xxx" />
+          <section id="filter">
+            <Rute text="4km walk" />
+            <Rute text="6km walk - Inner City" />
+            <Rute text="6km walk - Ørestaden" />
+            <Rute text="Lightrun 3.27km" />
+            <Rute text="Lightrun 7.35km" />
+            <Rute text="Downtown bikingroute" />
+            <Rute text="Uptown bikingroute" />
+            <Rute text="Bus: line 991 Teglholmen" />
+            <Rute text="Bus: line 18" />
+            <Rute text="Bus: line 1a" />
+            <Rute text="Bus: line 2a" />
+            <Rute text="Bus: line 26" />
+            <Rute text="Bus: line 11" />
+            <Rute text="Canaltour Stromma" />
           </section>
         </div>
         <div id="google-map"></div>
