--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,10 +23,12 @@ import Button from "../components/Button.astro";
         <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
         <h2 id="dato">2/2 - 25/2 2024</h2>
         <div class="Buttons">
-          <a class="Button1" href=""></a>
-          <Button variant="primary" size="medium">SE PROGRAM</Button>
-          <a class="Button2" href=""></a>
-          <Button variant="primary" size="medium">RUTER OG TURE</Button>
+          <a class="Button1" href="/program">
+            <Button variant="primary" size="medium">SE PROGRAM</Button>
+          </a>
+          <a class="Button2" href="/map">
+            <Button variant="primary" size="medium">RUTER OG TURE</Button>
+          </a>
         </div>
       </main>
     </div>
