--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -2,15 +2,14 @@
 const { variant, size } = Astro.props;
 ---
 
-<button><slot/></button>
+<button><slot /></button>
 
 <style>
-  
   button {
     padding: 1rem;
     background-color: transparent;
-    border: 2px solid #FFF8D2;
-    color:#FFF8D2;
+    border: 2px solid #fff8d2;
+    color: #fff8d2;
     margin: 1px;
   }
 </style>
