--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import "../style/index.css";
 import Card from "../components/Card.astro";
 import Navigation from "../components/Navigation.astro";
 import Button from "../components/Button.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -68,7 +69,9 @@ import Button from "../components/Button.astro";
       </div>
     </section>
     <div>
-      <footer></footer>
+      <footer>
+        <Footer />
+      </footer>
     </div>
   </body>
 </html>
