--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import Button from "../components/Button.astro";
       <main>
         <Navigation />
         <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
-        <h2 id="dato">2/2 - 25/2 2024</h2>
+        <h2 class="dato">2/2 - 25/2 2024</h2>
         <div class="Buttons">
           <a class="Button1" href="/program">
             <Button variant="primary" size="medium">SE PROGRAM</Button>
