--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,24 +41,26 @@ import Button from "../components/Button.astro";
     </article>
     <section id="grid-1">
       <div>
-        <img src="/IMG/kort.webp" />
+        <a href="/program"> <img src="/IMG/kort.webp" /></a>
         <h2>Se årets program</h2>
         <p>Udforsk årets lysværker og events</p>
-        <img class="pil" src="/IMG/pil.webp" alt="" />
+        <a href="/program"> <img class="pil" src="/IMG/pil.webp" alt="" /></a>
       </div>
 
       <div>
-        <img src="/IMG/kunstværk.webp" />
+        <a href="/map"> <img src="/IMG/kunstværk.webp" /></a>
         <h2>Tjek vores rutevejledning</h2>
         <p>Se nogle af vores gå-og cykelruter</p>
-        <img class="pil" src="/IMG/pil.webp" alt="" />
+        <a href="/map"> <img class="pil" src="/IMG/pil.webp" alt="" /></a>
       </div>
 
       <div>
-        <img src="/IMG/kunst.webp" />
+        <a href="/map"> <img src="/IMG/kunst.webp" /></a>
         <h2>Book en guidet tour</h2>
         <p>Oplev lysfestivalen på vores guidede ture</p>
-        <img class="pil" src="/IMG/pil.webp" alt="" />
+        <a href="/map">
+          <img class="pil" src="/IMG/pil.webp" alt="" />
+        </a>
       </div>
     </section>
     <section>
