--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Footer from "../components/Footer.astro";
 
     <title>Index</title>
   </head>
-  <body>
+  <body class="body-index">
     <div class="singlecellgrid">
       <img src="/IMG/baggrund.webp" />
       <main>
