--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
   <div>
     <p>@COPENHAGEN LIGHT FESTIVAL</p>
   </div>
-  <div>
+  <div id="grid-1-1-1-1">
     <p>FAQ</p>
     <p>PRESSE OG MEDIER</p>
     <p>KONTAKT</p>
@@ -27,6 +27,11 @@
         #footergrid {
           display: grid;
           grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        #grid-1-1-1-1 {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr 1fr;
         }
 
         #instagram_logo {
