--- a/src/style/style.css
+++ b/src/style/style.css
@@ -31,14 +31,12 @@ h2 {
 }
 
 h3 {
-  color: #b2b8eb;
-  
+  color: #b2b8eb; 
 }
 
 /*events*/
 
-#event
-{
+#event {
   padding: 50px;
   margin: 5px;
 }
@@ -74,6 +72,7 @@ h3 {
   margin-bottom: 10px;
   line-height: 16px;
 }
+
 .clfinfo p {
   color: #182178;
   font-weight: 300;
@@ -85,5 +84,4 @@ h3 {
   color: #fff8d2;
   padding: 15px;
   margin: 1px;
-
 }
