--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Footer from "../components/Footer.astro";
   </head>
   <body class="body-index">
     <div class="singlecellgrid">
-      <img src="/IMG/baggrund.webp" />
+      <img src="/img/baggrund.webp" />
       <main>
         <Navigation />
         <h1>EN SÆRLIG LYSFEJRING I VINTERMØRKET</h1>
@@ -42,25 +42,25 @@ import Footer from "../components/Footer.astro";
     </article>
     <section id="grid-1">
       <div>
-        <a href="/program"> <img src="/IMG/kort.webp" /></a>
+        <a href="/program"> <img src="/img/kort.webp" /></a>
         <h2>Se årets program</h2>
         <p>Udforsk årets lysværker og events</p>
-        <a href="/program"> <img class="pil" src="/IMG/pil.webp" alt="" /></a>
+        <a href="/program"> <img class="pil" src="/img/pil.webp" alt="" /></a>
       </div>
 
       <div>
-        <a href="/map"> <img src="/IMG/kunstværk.webp" /></a>
+        <a href="/map"> <img src="/img/kunstværk.webp" /></a>
         <h2>Tjek vores rutevejledning</h2>
         <p>Se nogle af vores gå-og cykelruter</p>
-        <a href="/map"> <img class="pil" src="/IMG/pil.webp" alt="" /></a>
+        <a href="/map"> <img class="pil" src="/img/pil.webp" alt="" /></a>
       </div>
 
       <div>
-        <a href="/map"> <img src="/IMG/kunst.webp" /></a>
+        <a href="/map"> <img src="/img/kunst.webp" /></a>
         <h2>Book en guidet tour</h2>
         <p>Oplev lysfestivalen på vores guidede ture</p>
         <a href="/map">
-          <img class="pil" src="/IMG/pil.webp" alt="" />
+          <img class="pil" src="/img/pil.webp" alt="" />
         </a>
       </div>
     </section>
@@ -69,7 +69,7 @@ import Footer from "../components/Footer.astro";
         <Button variant="primary" size="medium">PARTNERE & SPONSORER</Button>
       </div>
       <div class="spons-img">
-        <img src="/IMG/spons.webp" alt="" />
+        <img src="/img/spons-img.webp" alt="" />
       </div>
     </section>
     <div>
