--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -5,12 +5,12 @@ const { variant, size } = Astro.props;
 <button><slot /></button>
 
 <style>
-  
   Button {
     padding: 1rem;
     background-color: transparent;
     border: 2px solid #fff8d2;
     color: #fff8d2;
-    margin: 1px;
+    margin: 20px;
+    margin-bottom: 1px;
   }
 </style>
